# VulkanRenderer

./: .gitignore  CMakeLists.txt  README.md  remove_dirs.cmd  run_after_cmake.bat  run_cmake.cmd  vcpkg.json
shaders/: gradient.comp
src/: application.cpp  application.hpp  buffers.cpp  buffers.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  enums.hpp  instance.cpp  instance.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  vertex.hpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
src/shaders/: shader.frag  shader.vert
